css/style.css
/* Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
  border: none;
  text-decoration: none;
}

/* Coloring */
:root {
  --base-color: #fff;
  --text-color: #333;
  --secondary-bg: #d4d4d4;
  --accent-color: #007bff;
  --table-bg: #f9f9f9;
  --table-nth-bg: rgba(0, 0, 0, 0.1);
}

.darkmode {
  --base-color: #0f0f0f;
  --text-color: #fff;
  --secondary-bg: #252525;
  --accent-color: #007bff;
  --table-bg: #272727;
  --table-nth-bg: rgba(255, 255, 255, 0.1);
}

/* Body Section */
body {
  font-family: "Montserrat", sans-serif;
  background-color: var(--base-color);
  color: var(--text-color);
}

/* Header Section */

/* Navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.4rem 7%;
  background-color: var(--secondary-bg);
  border-bottom: 1px solid var(--text-color);
  color: var(--text-color);
}

.navbar .navbar-nav a {
  display: inline-block;
  color: var(--text-color);
  transition: color 0.3s;
  font-weight: 500;
  font-size: 1.1rem;
  margin: 0 1rem;
}

.navbar .navbar-nav a:hover {
  color: var(--accent-color);
}

.navbar .navbar-nav a::after {
  content: "";
  display: block;
  padding-bottom: 0.1rem;
  border-bottom: 0.1rem solid var(--accent-color);
  transform: scaleX(0);
}

.navbar .navbar-nav a:hover::after {
  transform: scaleX(0.5);
  transition: transform 0.3s linear;
}

.navbar .navbar-extra a {
  color: var(--text-color);
  font-size: 1.2rem;
  transition: color 0.3s;
}

.navbar .navbar-extra a:hover {
  color: var(--accent-color);
}

.navbar .sitename .shop-text {
  color: var(--accent-color);
}

.navbar .sitename {
  font-size: 1.5rem;
  font-weight: bold;
  font-style: italic;
}

.button #theme-switch {
  cursor: pointer;
  transition: 0.3s ease;
}

.button #theme-switch:hover {
  transform: scale(1.1);
}

/* Hamburger Menu */
#hamburger-menu {
  display: none;
}

/* Theme Switch */
#theme-switch {
  height: 40px;
  width: 40px;
  padding: 0;
  border-radius: 50%;
  background-color: var(--accent-color);
  display: flex;
  justify-content: center;
  align-items: center;
}

#theme-switch svg:last-child {
  display: none;
}
.darkmode #theme-switch svg:first-child {
  display: none;
}
.darkmode #theme-switch svg:last-child {
  display: block;
}

/* Main Section */

/* Home Main */
.hero {
  margin-top: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero .content .hero-image img {
  display: flex;
  margin-left: auto;
  margin-right: auto;
  max-width: 50%;
  border-radius: 1rem;
  object-fit: contain;
  transition: 0.35s ease;
}

.hero .content .hero-image img:hover {
  transform: scale(1.05);
}

.hero .content .hero-content {
  text-align: center;
  padding-top: 2rem;
}

.hero .content .hero-content h1 {
  font-size: 3rem;
  margin-bottom: 1rem;
  color: var(--text-color);
}

.hero .content .hero-content p {
  margin-left: 2rem;
  margin-right: 2rem;
  text-align: justify;
  font-size: 1.2rem;
  margin-bottom: 2rem;
  color: var(--text-color);
}

/* Gallery Main */

.hero .content .hero-content {
  padding-bottom: 1rem;
}

.hero .content .hero-content .shop-text {
  color: var(--accent-color);
}

.gallery-card {
  padding-top: 1rem;
  transition: 0.35s ease;
}

.gallery-card:hover {
  transform: scale(1.18);
}

.gallery-card {
  text-align: center;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  background-color: var(--secondary-bg);
  border-radius: 0.6rem;
}

.gallery-card .image-gallery {
  margin-left: auto;
  margin-right: auto;
}

.image-gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
  padding: 0.5rem 7%;
}

/* Form Main */
.hero .content .form-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: left;
  max-width: 60%;
  padding: 1.7rem 0;
  margin: 0 auto;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  background-color: var(--secondary-bg);
  border-radius: 0.6rem;
}
.hero .content .form-container .contact-form label {
  font-weight: 600;
  color: var(--text-color);
}

.hero .content .form-container .contact-form input,
select,
textarea {
  padding: 0.8rem;
  border: 1px solid #ccc;
  border-radius: 0.4rem;
  font-size: 1rem;
}

.hero .content .form-container .contact-form button {
  padding: 0.8rem;
  background-color: var(--accent-color);
  color: #fff;
  border-radius: 0.4rem;
  font-size: 1.1rem;
  cursor: pointer;
  transition: background-color 0.3s;
}

.hero .content .form-container button:hover {
  background-color: #0056b3;
}

/* Table Main */

.table-container {
  padding: 2rem 7%;
}

.table-container .data-table {
  background-color: var(--table-bg);
  width: 100%;
  border-collapse: collapse;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.table-container .data-table thead tr {
  color: #fff;
}

.table-container .data-table th {
  background-color: var(--accent-color);
}

.table-container .data-table th,
.table-container .data-table td {
  padding: 0.8rem;
  text-align: left;
}

.table-container tbody tr {
  border-bottom: 1px solid #ccc;
}

.table-container tbody tr:nth-child(even) {
  background-color: rgba(0, 0, 0, 0.1);
}

.table-container tbody tr:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

/* Footer Section */
.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  padding: 1rem 7%;
  background-color: var(--secondary-bg);
  border-top: 1px solid var(--text-color);
  color: var(--text-color);
  margin-top: 20.2rem;
}

.footer .shop-text {
  color: var(--accent-color);
}

/* Media Queries */

/* Laptop */
@media (max-width: 1024px) {
  html {
    font-size: 75%;
  }
}

/* Tablet */
@media (max-width: 768px) {
  html {
    font-size: 62.5%;
    overflow-x: hidden;
    width: 100%;
  }
  /* Navbar Section */
  #hamburger-menu {
    display: inline-block;
  }

  .navbar .navbar-nav {
    position: absolute;
    top: 0.01%;
    right: -100%;
    background-color: var(--text-color);
    width: 30rem;
    height: 100vh;
    transition: 0.3s;
  }

  .navbar .navbar-nav.active {
    right: 0;
  }

  .navbar .navbar-nav a {
    color: var(--base-color);
    display: block;
    margin: 1.5rem;
    padding: 0.5rem;
    font-size: 2rem;
  }

  .navbar .navbar-nav a::after {
    transform-origin: 0 0;
  }

  .navbar .navbar-nav a:hover::after {
    transform: scaleX(0.2);
  }

  /* Gallery Main */
  .image-gallery {
    grid-template-columns: repeat(2, 1fr);
  }
}

/* Mobile Phone */
@media (max-width: 450px) {
  html {
    font-size: 55%;
  }

  /* Main Section */

  /* Gallery Main */
  .image-gallery {
    grid-template-columns: 1fr;
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    gap: 2.5rem;
  }

  .hero .content .form-container {
    max-width: 90%;
  }

  /* Table Main */
  .table-container .data-table {
    display: block;
    width: 100%;
    overflow: scroll;
  }

  /* Footer Section */
  .home-page .footer {
    margin-top: 35.6rem;
  }
}

